--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <VersionPrefix>0.1.0</VersionPrefix>
-    <VersionSuffix>B0005</VersionSuffix>
-    <Description>A .NET library for reading Excel data files.</Description>
-    <PackageTags>excel;xls;xlsx;datareader</PackageTags>
-    <Nullable>enable</Nullable>
-    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<VersionPrefix>0.1.0</VersionPrefix>
+		<Description>A cross-platform .NET library for reading Excel data files.</Description>
+		<PackageTags>excel;xls;xlsx;datareader</PackageTags>
+		<Nullable>enable</Nullable>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
+	</PropertyGroup>
 </Project>
