--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<VersionPrefix>0.1.2</VersionPrefix>
+		<TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+		<VersionPrefix>0.1.3</VersionPrefix>
 		<Description>A cross-platform .NET library for reading Excel data files.</Description>
 		<PackageTags>excel;xls;xlsx;datareader</PackageTags>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
+		<DefineConstants Condition="$(TargetFramework) == 'netstandard2.1'">$(DefineConstants);SPAN_PARSE</DefineConstants>
 	</PropertyGroup>
+
+	<ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
+		<PackageReference Include="System.Memory" Version="4.5.1"/>
+	</ItemGroup>
 </Project>
