--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: 6.0.100-preview.7.21379.14
+        dotnet-version: 6.0.100
     - name: Restore dependencies
       run: dotnet restore source
     - name: Build
