--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,7 @@ dotnet_style_require_accessibility_modifiers = never
 
 # CA1028: If possible, make the underlying type of PrimitiveType System.Int32 instead of byte.
 dotnet_diagnostic.CA1028.severity = none
+csharp_indent_labels=one_less_than_current
 
 
 [*.{xml,props,targets}]
