--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,31 +1,36 @@
 <Project>
-  <PropertyGroup>
-    <OutputPath>$(MSBuildThisFileDirectory)bin\$(Configuration)</OutputPath>
-    <PackageOutputPath>$(MSBuildThisFileDirectory)packages\</PackageOutputPath>
-    <Owner>Mark Pflug</Owner>
-    <Authors>$(Owner)</Authors>
-    <PackageIconUrl>https://markpflug.github.io/Sylvan.png</PackageIconUrl>
-    <PackageIcon>Sylvan.png</PackageIcon>
-    <Copyright>© 2022 $(Owner)</Copyright>
-    <PackageLicenseFile>license.txt</PackageLicenseFile>
-    <LangVersion>10.0</LangVersion>
+	<PropertyGroup>
+		<OutputPath>$(MSBuildThisFileDirectory)bin\$(Configuration)</OutputPath>
+		<PackageOutputPath>$(MSBuildThisFileDirectory)packages\</PackageOutputPath>
+		<Owner>Mark Pflug</Owner>
+		<Authors>$(Owner)</Authors>
+		<PackageIconUrl>https://markpflug.github.io/Sylvan.png</PackageIconUrl>
+		<PackageIcon>Sylvan.png</PackageIcon>
+		<Copyright>© 2022 $(Owner)</Copyright>
+		<PackageLicenseFile>license.txt</PackageLicenseFile>
+		<LangVersion>10.0</LangVersion>
 
-    <RepositoryUrl>https://github.com/MarkPflug/Sylvan.Data.Excel</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsNotAsErrors>CS1030;CA1835;$(WarningsNotAsErrors)</WarningsNotAsErrors>
-  
-    <IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests')) == 'true'">true</IsTestProject>
-    <SourceControlInformationFeatureSupported>true</SourceControlInformationFeatureSupported>      
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)license.txt" Pack="true" PackagePath="">
-      <Visible>false</Visible>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Sylvan.png" Pack="true" PackagePath="">
-      <Visible>false</Visible>
-    </None>
-  </ItemGroup>
+		<RepositoryUrl>https://github.com/MarkPflug/Sylvan.Data.Excel</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		<WarningsNotAsErrors>CS1030;CA1835;$(WarningsNotAsErrors)</WarningsNotAsErrors>
+
+		<IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests')) == 'true'">true</IsTestProject>
+		<SourceControlInformationFeatureSupported>true</SourceControlInformationFeatureSupported>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="$(MSBuildThisFileDirectory)license.txt" Pack="true" PackagePath="">
+			<Visible>false</Visible>
+		</None>
+		<None Include="$(MSBuildThisFileDirectory)Sylvan.png" Pack="true" PackagePath="">
+			<Visible>false</Visible>
+		</None>
+		<None
+			Condition="Exists('$(MSBuildThisFileDirectory)readme.md')"
+			Include="$(MSBuildThisFileDirectory)readme.md"
+			Pack="true"
+			PackagePath=""/>
+	</ItemGroup>
 
 </Project>
