--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -5,7 +5,7 @@
 		<VersionPrefix>0.1.7</VersionPrefix>
 		<VersionSuffix>b0002</VersionSuffix>
 		<Description>A cross-platform .NET library for reading Excel data files.</Description>
-		<PackageTags>excel;xls;xlsx;datareader</PackageTags>
+		<PackageTags>excel;xls;xlsx;xlsb;datareader</PackageTags>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
