--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,11 @@
 
 		<IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests')) == 'true'">true</IsTestProject>
 		<SourceControlInformationFeatureSupported>true</SourceControlInformationFeatureSupported>
+
+		<ReadmeFile>$(MSBuildThisFileDirectory)readme.md</ReadmeFile>
+		<PackageReadmeFile
+			Condition="Exists($(ReadmeFile))">readme.md</PackageReadmeFile>
+
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="$(MSBuildThisFileDirectory)license.txt" Pack="true" PackagePath="">
@@ -27,8 +32,8 @@
 			<Visible>false</Visible>
 		</None>
 		<None
-			Condition="Exists('$(MSBuildThisFileDirectory)readme.md')"
-			Include="$(MSBuildThisFileDirectory)readme.md"
+			Condition="Exists($(ReadmeFile))"
+			Include="$(ReadmeFile)"
 			Pack="true"
 			PackagePath=""/>
 	</ItemGroup>
