Add a couple missing formats. Fix xlsb sheet lookup. Fix module issue.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,7 +35,9 @@
 			Condition="Exists($(ReadmeFile))"
 			Include="$(ReadmeFile)"
 			Pack="true"
-			PackagePath=""/>
+			PackagePath="">
+			<Visible>false</Visible>
+		</None>
 	</ItemGroup>
 
 </Project>
