--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Sylvan.Data" Version="0.1.0-B0021" />
     <PackageReference Include="Sylvan.Data.Csv" Version="0.10.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+	<PackageReference Include="xunit" Version="2.4.0" />
+	<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
