Charles durrant tr dev (#50)
* MultiTarget tests, Make code compatible with net48/47 projects with respect to System.Memory

Added CharSpan and ReadonlyCharSpan usings to differentiate between netstandard 2.0/2.1
Removed specific System.Memory reference from netstandard2.0 so the project can easily be used with .NET 4.8/4.7/4.6 mixed netstandard projects without getting System.Memory.dll runtime errors.
Made the unit test project test both netstandard 2.0 & 2.1 by referencing NET 6 and net48

* Missed some package references that I removed but didn't put back - shocking

* Change #if to !NETSTANDARD2_1_OR_GREATER, allow code to be statically linked into a net48 projecct

Change #ifs to !NETSTANDARD2_1_OR_GREATER
Allow code to be statically linked into a net48 projecct (#nullable enable)

* cleanup formatting.

* try to fix failing test.

Co-authored-by: Charles Durrant <charles.durrant@thomsonreuters.com>

--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>net48;net6.0</TargetFrameworks>
     <RootNamespace>Sylvan.Data.Excel</RootNamespace>
     <IsPackable>false</IsPackable>
     <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
@@ -11,9 +11,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Sylvan.Data" Version="0.1.0-B0021" />
     <PackageReference Include="Sylvan.Data.Csv" Version="0.10.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+	<PackageReference Include="xunit" Version="2.4.0" />
+	<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
