Add NonAscii test, fixed xlsx reader Added Blank2ndSheet test Made editor config specify LF as that was the case for all the files

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,7 @@ root = true
 
 [*.cs]
 indent_style = tab
+end_of_line=LF
 
 dotnet_style_qualification_for_field = true
 dotnet_style_qualification_for_property = true
