--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -1,29 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net48;net6.0</TargetFrameworks>
-    <RootNamespace>Sylvan.Data.Excel</RootNamespace>
-    <IsPackable>false</IsPackable>
-    <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<RootNamespace>Sylvan.Data.Excel</RootNamespace>
+		<IsPackable>false</IsPackable>
+		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Sylvan.Data" Version="0.1.0-B0021" />
-    <PackageReference Include="Sylvan.Data.Csv" Version="0.10.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
-	<PackageReference Include="xunit" Version="2.4.0" />
-	<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+		<PackageReference Include="Sylvan.BuildTools.Resources" Version="0.6.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Sylvan.Data" Version="0.1.0-B0021" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.16" />
+		<PackageReference Include="coverlet.collector" Version="1.2.0" />
+		<PackageReference Include="xunit" Version="2.4.0" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
-  </ItemGroup>
+		<Reference Include="System.IO.Compression" />
+		<ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="Data/**/*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<StaticResourceFolder Include="TestData" />
+		<None Update="Data/**/*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
