--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -13,7 +13,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Sylvan.Data" Version="0.1.0-B0021" />
+		<PackageReference Include="Sylvan.Data" Version="0.2.2" />
 		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.16" />
 		<PackageReference Include="coverlet.collector" Version="1.2.0" />
 		<PackageReference Include="xunit" Version="2.4.0" />
