--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -14,6 +14,7 @@
 		</PackageReference>
 		<PackageReference Include="Sylvan.Data" Version="0.2.2" />
 		<PackageReference Include="Sylvan.Data.Csv" Version="1.1.16" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 		<ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
 		<Reference Include="System.IO.Compression" Condition="$(TargetFramework) == 'net48'" />
 	</ItemGroup>
