--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<VersionPrefix>0.3.4</VersionPrefix>
 		<VersionSuffix>b0001</VersionSuffix>
@@ -10,7 +10,15 @@
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
-		<DefineConstants Condition="$(TargetFramework) == 'netstandard2.1'">$(DefineConstants);SPAN_PARSE</DefineConstants>
+		
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(TargetFramework) == 'netstandard2.1'">
+		<DefineConstants>$(DefineConstants);SPAN</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="$(TargetFramework) == 'net6.0'">
+		<DefineConstants>$(DefineConstants);SPAN;DATE_ONLY</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
