--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,10 @@ dotnet_style_qualification_for_event = true
 
 dotnet_style_require_accessibility_modifiers = never
 
-# CA1028: If possible, make the underlying type of PrimitiveType System.Int32 instead of byte.
-dotnet_diagnostic.CA1028.severity = none
 csharp_indent_labels=one_less_than_current
 
+# CA2007: Do not directly await a Task
+dotnet_diagnostic.CA2007.severity = warning
 
 [*.{xml,props,targets}]
 intent_style = space
