xlsb writing progress

--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -20,6 +20,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="styles.bin" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="styles.bin" LogicalName="styles" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<InternalsVisibleTo Include="Sylvan.Data.Excel.Tests" />
 	</ItemGroup>
 </Project>
