--- a/source/XlsbTester/XlsbTester.csproj
+++ b/source/XlsbTester/XlsbTester.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
+  </ItemGroup>
+
 </Project>
