--- a/source/XlsbTester/XlsbTester.csproj
+++ b/source/XlsbTester/XlsbTester.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Test.xlsb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
