--- a/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
+++ b/source/Sylvan.Data.Excel/Sylvan.Data.Excel.csproj
@@ -21,5 +21,6 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="Sylvan.Data.Excel.Tests" />
+		<InternalsVisibleTo Condition="$(Configuration) == 'Debug'" Include="XlsbTester" />
 	</ItemGroup>
 </Project>
