Add support for 1904 date mode.

--- a/source/XlsbTester/XlsbTester.csproj
+++ b/source/XlsbTester/XlsbTester.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Test.xlsb">
+    <None Update="*.xlsb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
