--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(TargetFramework) == 'net6.0'">
-		<DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
+		<DefineConstants>$(DefineConstants);ASYNC;DATEONLY</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
