--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,13 +8,13 @@
 		<PackageIcon>Sylvan.png</PackageIcon>
 		<Copyright>© 2024 $(Owner)</Copyright>
 		<PackageLicenseFile>license.txt</PackageLicenseFile>
-		<LangVersion>10.0</LangVersion>
+		<LangVersion>13.0</LangVersion>
 
 		<RepositoryUrl>https://github.com/MarkPflug/Sylvan.Data.Excel</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-		<WarningsNotAsErrors>CS1030;CA1835;$(WarningsNotAsErrors)</WarningsNotAsErrors>
+		<WarningsNotAsErrors>NU1903;NU1902;CS1030;CA1835;$(WarningsNotAsErrors)</WarningsNotAsErrors>
 
 		<IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests')) == 'true'">true</IsTestProject>
 		<SourceControlInformationFeatureSupported>true</SourceControlInformationFeatureSupported>
